# karpathy

./: .gitignore  README.md  pyproject.toml
karpathy/: .env.example  agent.py  tools.py  utils.py
