[project]
name = "karpathy"
version = "0.1.0"
description = "Karpathy: An agentic Machine Learning Engineer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.68",
    "google-adk>=1.31.1",
    "litellm>=1.83.13",
    "markitdown[all]>=0.1.5",
    "mcp>=1.27.0",
    "modal>=1.3.3",
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]
