[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "karpathy"
version = "0.1.0"
description = "Karpathy: An agentic Machine Learning Engineer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.2.87",
    "google-adk>=2.1.0",
    "litellm>=1.86.2",
    "markitdown[all]>=0.1.5",
    "mcp>=1.27.2",
    "modal>=1.4.3",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
]
